--- a/native-echarts/common-charts/bar-charts/basic-bar.html
+++ b/native-echarts/common-charts/bar-charts/basic-bar.html
@@ -2,24 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>echarts学习</title>
-    <link type="text/css" rel="stylesheet" href="./assets/index.css">
-    <!-- 1.本地引入echarts -->
-    <script src="./assets/echarts.js"></script>
-    <!-- 2.cdn引入 echarts -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.0/dist/echarts.js"></script> -->
+    <title>echarts-基础柱状图</title>
+    <link type="text/css" rel="stylesheet" href="../../assets//index.css">
+    <script src="../../assets/echarts.js"></script>
 </head>
 <body>
-    <!-- 2.为ECharts准备一个指定宽高的 Dom作为渲染的容器 -->
-    <div id="main" class="content-box" style="width: 600px;height:400px;"></div>
-
+    <div id="main" class="content-box"></div>
     <!-- script -->
     <script type="text/javascript">
-        // 3.获取准备好的dom元素，并利用echarts.init方法初始化echarts实例
         const myChart = echarts.init(document.getElementById('main'));
 
-        // 4.利用实例的 setOption() 方法绘制图表,它接收一个配置对象。这个配置对象指定了要绘制图表的配置项和数据。
-        // 4.1指定图表的配置项和数据
         const option = {
             title: {
                 text: 'ECharts 入门示例'
